# ius-libiuf

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  MAINTAINERS.md  Makefile  Makefile.h5cc  MakefileV3  PreLoad.cmake  README.md  annotated.html  annotated_dup.js  classes.html  dir_255fa8f554e95a439f260058328638ab.html  dir_255fa8f554e95a439f260058328638ab.js  dir_9bb0cdb2fc6936e925cffa69d90b0c80.html  dir_9bb0cdb2fc6936e925cffa69d90b0c80.js  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.js  dir_fc6ec888ee4e68896ddb09f24a9c117a.html  dir_fc6ec888ee4e68896ddb09f24a9c117a.js  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_p.html  functions_q.html  (+629 more)
Docker/: Dockerfile  README.md
MatLab/: arrayExample.m  arrayExample.py  convertMatLab2IufIqFile.m  convertMatLab2IusIqFile.m  example.m  initIufLibrary.m  initIusLibrary.m  inputFile.fig  inputFile.m  testConvertMatLab2IufIqFile.m  testConvertMatLab2IusIqFile.m  writeIufIqFile.m  writeIusIqFile.m
dox/: Doxyfile
examples/: CMakeLists.txt  README.md
examples/genV3file/: CMakeLists.txt
examples/genV3file/include/: nodeConfig.h
examples/genV3file/src/: main.c  nodeConfig.c
examples/include/: nodeConfig.h
examples/iufInputFileConvert/: CMakeLists.txt
examples/iufInputFileConvert/include/: iufInputFileReadV2.h
examples/iufInputFileConvert/src/: main.c  readInputFileV2.c
examples/iusInputFileConvert/: CMakeLists.txt
examples/iusInputFileConvert/include/: iusInputFileReadV2.h
examples/iusInputFileConvert/src/: main.c  readInputFileV2.c
examples/matlabConfigurator/: CMakeLists.txt
examples/matlabConfigurator/configs/: README.md  create_transducer_config.py  s51.yaml  write_transducer.py
examples/matlabConfigurator/src/: getopt.c  getopt.h  main.c  main_old_c
examples/src/: main.c  nodeConfig.c
include/: iusAlgoParams.h  iusBMode.h  iusBModeFile.h  iusBasicFunctions.h  iusCWC.h  iusCWC4DWD.h  iusCWCFile.h  iusComplex.h  iusDFT.h  iusDspLib.h  iusError.h  iusFFT.h  iusFFTC.h  iusHDF5.h  iusInput.h  iusInsituFile.h  iusLUT.h  iusLine2D.h  iusMatrix.h  iusMatrixC.h  iusMatrixUtils.h  iusMedianFilter.h  iusNode.h  iusPosition.h  iusPositionFile.h  iusQuadratureDetectUtils.h  iusRFFile.h  iusScalarC.h  iusTypes.h  iusUuid.h  iusVector.h  iusVectorC.h  iusVelocityFile.h
lib/hdf5/include/: H5pubconf.h
lib/hdf5/lib/: libhdf5.la  libhdf5.settings  libhdf5.so.8  libhdf5_hl.la  libhdf5_hl.so.8.0.1
lib/hdf5_win64/include/: H5pubconf.h  h5_dble_interface.mod  h5a.mod  h5a_provisional.mod  h5d.mod  h5d_provisional.mod  h5ds.mod  h5e.mod  h5e_provisional.mod  (+24 more)
main/: CMakeLists.txt
main/src/: main.c
mex/: README.txt
mex/m/: mxInputFile.mexa64  mxInputFile.mexw64  testMxInputFile.m
mex/src/: build.bat  build.sh  howToCompile.txt  mxCreate.m  mxHandleList.c  mxHandleList.h  mxInputFile.c  mxSpectralDoppler.c
package/: CMakeLists.txt  PreLoad.cmake  README.md
python/: CMakeLists.txt  Makefile  PythonIuf.it  PythonIus.i  PythonIus.it  extendDict.it  ius.i  libiuf.i  piuf.i  requirements.txt  s0list.it  setup.py.in
python/python2/: CMakeLists.txt  Python2Iuf.i  Python2Ius.i  PythonIus.i
python/python3/: CMakeLists.txt  Python3Iuf.i  Python3Ius.i  PythonIus.i
python/test/: test_acquisition.py  test_data.py  test_error.py  test_iqdata.py  test_parameter_dict.py  test_sources.py  test_transducer.py
python/tests/: test_binding.py
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  typedefs_0.js  variables_1.js  variables_10.js  variables_13.js  variables_14.js  variables_2.js  variables_3.js  (+12 more)
src/: iusAlgoParams.c  iusBMode.c  iusBasicFunctions.c  iusCWC.c  iusCWC4DWD.c  iusCWCFile.c  iusDFT.c  iusFFT.c  iusFFTC.c  iusHDF5.c  iusInput.c  iusInputFile.c  iusLUT.c  iusLine2D.c  iusMatrix.c  iusMatrixC.c  iusMatrixUtils.c  iusMedianFilter.c  iusNode.c  iusQuadratureDetectUtils.c  iusRFFile.c  iusScalarC.c  iusUuid.c  iusVector.c  iusVectorC.c
test/testRFFile/: iusRFFileTest.c  run.sh
test/testVera2Input/: Makefile  iusVera2InputTest.c  run.sh
unitTests/: CMakeLists.txt  Makefile  Makefile.h5cc  iusInputTests.c  iusInputTests.h  iusLUTTests.c  iusLUTTests.h  iusMedianFilterTests.c  iusMedianFilterTests.h  iusVectorTests.c  iusVectorTests.h  main.c  run.sh  unitTests.sln  unitTests.vcxproj  unitTests.vcxproj.filters
unitTests/dg/: CMakeLists.txt  dataGenerators.c  dataGenerators.h
unitTests/include/: testDataGenerators.h  testDrivingScheme.h  testReceiveSettings.h  uniTests.h  util.h
unitTests/src/: testDataGenerators.c  testDrivingScheme.c  testInputFile.c  testIuf2DNonParametricSource.c  testIuf2DParametricSource.c  testIuf2DTransducer.c  testIuf2DTransducerElement.c  testIuf2DTransducerElementList.c  testIuf3DNonParametricSource.c  testIuf3DParametricSource.c  testIuf3DTransducer.c  testIuf3DTransducerElement.c  testIuf3DTransducerElementList.c  testIufAcquisition.c  testIufDataStream.c  testIufDataStreamDict.c  testIufDemodulation.c  testIufDemodulationDict.c  testIufErrorHandling.c  testIufFile.c  testIufFilter.c  testIufFrame.c  testIufFrameList.c  testIufHistoryNode.c  testIufHistoryNodeList.c  testIufInputFile.c  testIufIqFile.c  testIufIqPattern.c  testIufIqPatternList.c  testIufIqPatternListDict.c  testIufNonParametricPulse.c  testIufParameterDict.c  testIufParametricPulse.c  testIufPattern.c  testIufPatternList.c  testIufPatternListDict.c  testIufPulse.c  testIufPulseDict.c  testIufReceiveChannelMap.c  testIufReceiveChannelMapDict.c  (+73 more)
(+3 files in other folders)
