SET(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)
#CMAKE_POLICY(SET CMP0078 NEW)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

#SET(CMAKE_FIND_LIBRARY_SUFFIXES .a)
#SET(Python2_USE_STATIC_LIBS TRUE)
find_package (Python2 COMPONENTS Development)
if(Python2_FOUND)
    INCLUDE_DIRECTORIES(${Python2_INCLUDE_DIRS})
    LINK_DIRECTORIES(${Python2_LIBRARY_DIRS})


    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/library/include)
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/library/private)
    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/external/hashmap/src)
    INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})

    SET(CMAKE_SWIG_FLAGS "")
    SET(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)
    SET(IUS_TARGET "Python2Ius")
    SWIG_ADD_LIBRARY(${IUS_TARGET} LANGUAGE python SOURCES PythonIus.i)
    TARGET_LINK_LIBRARIES(${IUS_TARGET}
            ${Python2_LIBRARIES}
            ${IUS_LIBRARIES}
            ${HDF5_LIBRARIES}
            ${HDF5_HL_LIBRARIES}
            ${UUID_LIBRARIES}
            )

    file(GLOB_RECURSE PYTHON_FILES
            "${PROJECT_BINARY_DIR}/python/*PythonIus*")
    message("PROJECT_BINARY_DIR is ${PROJECT_BINARY_DIR}")
    set(IUS_INSTALL_PATH "${PROJECT_BINARY_DIR}/dist/python27/${CMAKE_SYSTEM_NAME}")
    install(
    TARGETS ${IUS_TARGET}
    RUNTIME DESTINATION ${IUS_INSTALL_PATH}
    LIBRARY DESTINATION ${IUS_INSTALL_PATH}
    ARCHIVE DESTINATION ${IUS_INSTALL_PATH}
    )
    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${IUS_TARGET}.py" DESTINATION  ${IUS_INSTALL_PATH})
endif()
